--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-**.incl linguist-language=GLSL
-**.vs linguist-language=GLSL
-**.fs linguist-language=GLSL
+*.incl linguist-language=GLSL
+*.vs linguist-language=GLSL
+*.fs linguist-language=GLSL
